--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf8">
   <meta charset="viewport" content="width=device-width, inital-scale=1, minimum-scale=0.5, maximum-scale=0.5, minimal-ui">
   <title>MASH</title>
-  <link href="" rel="stylesheet">
-  <link href="" rel="stylesheet">
+  <link href="normalize.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
   <!--HEAD SECTION ENDS-->
 
