--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p class="description">FOOLISH MORTAL! Let thee fill in thine blanks and thou  shalt have thine future be fortold!</p>
   <form action="" method="post" id="mash">
     <div id="answers" class="hide">
-      <p> Thou art a "___" <span id="answer_1"></span> on a journey to find "___" <span id="answer_3"></span> and must travel through "___" <span id="answer_2"></span> that is ruled by the dark lord Dargon! <span id="home"></span>.
+      <p> Thou art a <span id="answer_1"></span> on a journey to find <span id="answer_3"></span> and must travel through "___" <span id="answer_2"></span> that is ruled by the dark lord Dargon! <span id="castle"></span>.
     </div>
     <div class="bucket"> 
       <div class="choice-bucket">
