--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!--BODY SECTION STARTS-->
 <body>
   <h1>MASH</h1>
-  <p class="description">FOOLISH MORTAL! Let thee fill in thine blanks and thou  shalt have thine future be fortold!</p>
+  <p class="description">FOOLISH MORTAL! Let thee fill in thine blanks and thou  shalt have thine future be foretold!</p>
   <form action="" method="post" id="mash">
     <div id="answers" class="hide">
       <p> Thou art a <span id="answer_1"></span> on a journey to find <span id="answer_3"></span> and must travel through <span id="answer_2"></span> that is ruled by the dark lord Dargon! In his giant <span id="home"></span>
